Login page ie8 layout bug fix.

--- a/public/stylesheets/input.css
+++ b/public/stylesheets/input.css
@@ -1,3 +1,7 @@
+.inputs {
+  overflow: hidden;
+}
+
 .inputs .label-input {
   float: left;
   position: relative;
